--- a/React/Components_file/p_p/src/newStyle.css
+++ b/React/Components_file/p_p/src/newStyle.css
@@ -1,7 +1,3 @@
 .card {
-    border: 3px solid black;
-    width: 300px;
-    padding: 10px;
-    margin: 0 auto;
-    margin-bottom: 10px;
+    margin: 50px;
 }
