--- a/mega-movies/client/src/Movies.css
+++ b/mega-movies/client/src/Movies.css
@@ -27,7 +27,7 @@ body {
 .movieCard {
   background-color: black;
   text-align: center;
-  opacity: .84;
+  opacity: .90;
   display: flex;
   flex-direction: column;
   max-width: 300px;
@@ -47,4 +47,23 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+}
+
+label {
+  color: white;
+}
+
+input,
+button {
+  background-color: grey;
+  margin: 0;
+  padding: 0;
+}
+
+.err {
+  margin: 0;
+  padding: 0;
+  color: red;
+  font-weight: bold;
+  font-size: 9pt;
 }
